Fix for issue: Left nav overlap with view in slide over mode for mobile view.

--- a/src/main/webapp/scripts/modules/layouts/device/styles/less/mobile.less
+++ b/src/main/webapp/scripts/modules/layouts/device/styles/less/mobile.less
@@ -10,7 +10,7 @@
   top: 0;
   &.slide-over {
     left: -100%;
-    z-index: 1010;
+    z-index: 1020;
 
     &.visible {
       left: 0;
